sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:15: error: ';' expected but '=' found.
    liste[j]=v
            ^