sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.code
def insertionSort() {
  var v = 0
  var j=0
  if(!pluspetit(0,1)){
    echange(0,1)
  }
  for (i<-2 to getNombreValeurs()-1){
    v = getValeur(i)
    j=i-1
    while(!pluspetitQue(j,v)||j!=0){
      copie(j,j+1)
      j=j-1
    }
    liste[j]=v
  }
}